fix: spacing on thinspace causing line break

--- a/src/sass/pages/home2.scss
+++ b/src/sass/pages/home2.scss
@@ -127,7 +127,6 @@ article header {
       vertical-align: top;
       position: relative;
       top: -2px;
-      left: -2px;
     }
   }
 
